macviews: honor BrowserView minimum size

BrowserNonClientFrameViewMac ignores the size constraints of the BrowserView
and uses a hardcoded window size. This breaks when the BrowserView's layout
requires more space than the hardcoded window minimum size allows. This change
causes BrowserNonClientFrameViewMac to compute the its minimum size correctly
(including the Mac-specific width-to-height ratio for minimum sizes) and keeps
it synced to the WindowServer so that window resizes actually honor it.

Bug: 921964
Change-Id: I696471cbfbc6fdb0fa9f269a17a10f458536ca89
Reviewed-on: https://chromium-review.googlesource.com/c/1417731
Reviewed-by: Dana Fried <dfried@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#624785}
Former-commit-id: a5e24036a831654fd74451a09a86e6ea33619dc1