chrome/browser/ui/views/frame/browser_non_client_frame_view_mac.h
@@ -44,6 +44,7 @@ class BrowserNonClientFrameViewMac : public BrowserNonClientFrameView {
   void UpdateWindowIcon() override;
   void UpdateWindowTitle() override;
   void SizeConstraintsChanged() override;
+  void UpdateMinimumSize() override;
 
   // views::View:
   gfx::Size GetMinimumSize() const override;
